--- a/css/basic_information_section.css
+++ b/css/basic_information_section.css
@@ -4,8 +4,6 @@ div#basic_information_wrapper {
   position: relative;
   left: 0;
   top: 0;
-  border: solid 2px green;
-  box-sizing: border-box;
 }
 div#basic_information_wrapper svg {
   position: absolute;
@@ -158,10 +156,289 @@ div#basic_information_wrapper .bi_bg_text_yellow p {
 @media screen and (max-width: 1200px) {
   div#basic_information_wrapper .infos_wrapper div.my_pic {
     top: 30px;
+    right: 30px;
   }
 }
 @media screen and (max-width: 1000px) {
   div#basic_information_wrapper .infos_wrapper div.my_pic {
     top: 70px;
+  }
+}
+@media screen and (max-width: 768px) {
+  div#basic_information_wrapper {
+    width: 100%;
+    height: 72rem;
+    position: relative;
+    left: 0;
+    top: 0;
+  }
+  div#basic_information_wrapper svg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+  }
+  div#basic_information_wrapper .infos_wrapper {
+    max-width: 1200px;
+    height: 33rem;
+    margin: 0 auto;
+    height: auto;
+    display: flex;
+    align-content: center;
+    position: relative;
+    left: 0;
+    top: 28rem;
+    z-index: 1;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info {
+    width: calc(50% - 30px);
+    height: 33rem;
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-content: center;
+    gap: 3rem;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list li {
+    width: 100%;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list li:hover p.title::before {
+    transform: scale(1.2);
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list li p.title {
+    color: white;
+    font: normal 1.5rem "Noto sans KR";
+    position: relative;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list li p.title::before {
+    content: "";
+    width: 2.2rem;
+    height: 2.2rem;
+    border-radius: 50%;
+    background: #FF9900;
+    position: absolute;
+    left: -1.2rem;
+    top: -0.3rem;
+    z-index: -1;
+    transition: all 0.2s ease-out;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list li p.text {
+    color: white;
+    font: normal 1.2rem "Noto sans KR";
+    margin-top: 1rem;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list li p.text span {
+    transition: all 0.1s ease-out;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list li p.text span:hover {
+    cursor: pointer;
+    color: aqua;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list li p#alertCopy {
+    color: rgb(255, 255, 255);
+    font: 100 0.8rem "Noto sans KR";
+    margin-top: 1rem;
+    transition: all 0.2s ease-out;
+  }
+  div#basic_information_wrapper .infos_wrapper div.my_pic {
+    width: 45vw;
+    height: 66.33vw;
+    position: absolute;
+    right: 20px;
+    top: 70px;
+    display: flex;
+    align-content: center;
+  }
+  div#basic_information_wrapper .infos_wrapper div.my_pic img {
+    width: 45vw;
+    height: 66.33vw;
+    -o-object-fit: contain;
+       object-fit: contain;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  div#basic_information_wrapper .infos_wrapper div.my_pic .img_blue_cover {
+    width: calc(45vw - 40px);
+    height: calc(66.33vw - 40px);
+    background: #003CFF;
+    mix-blend-mode: lighten;
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    z-index: 3;
+  }
+  div#basic_information_wrapper .infos_wrapper div.my_pic .bi_bg_circle_yellow {
+    width: 49rem;
+    height: 49rem;
+    border-radius: 50%;
+    background: rgba(255, 153, 0, 0.2);
+    background: linear-gradient(to bottom, rgba(255, 153, 0, 0.5) 0%, rgba(255, 153, 0, 0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#ff9900", endColorstr="#00ff9900",GradientType=0 );
+    position: absolute;
+    left: 5rem;
+    top: -9rem;
+    z-index: -1;
+  }
+  div#basic_information_wrapper .bi_bg_line_blue {
+    position: relative;
+    left: 0;
+    top: -5rem;
+  }
+  div#basic_information_wrapper .bi_bg_text_yellow {
+    width: 100%;
+    height: auto;
+    position: relative;
+    top: 15rem;
+    text-align: center;
+  }
+  div#basic_information_wrapper .bi_bg_text_yellow p {
+    color: rgba(255, 153, 0, 0.2);
+    font: normal 9.375rem "Dela Gothic One";
+  }
+}
+@media screen and (max-width: 768px) {
+  div#basic_information_wrapper {
+    width: 100%;
+    height: 72rem;
+    position: relative;
+    left: 0;
+    top: 0;
+  }
+  div#basic_information_wrapper svg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+  }
+  div#basic_information_wrapper .infos_wrapper {
+    max-width: 1200px;
+    height: 33rem;
+    margin: 0 auto;
+    height: auto;
+    display: flex;
+    align-content: center;
+    position: relative;
+    left: 0;
+    top: 28rem;
+    z-index: 1;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info {
+    width: calc(50% - 30px);
+    height: 33rem;
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-content: center;
+    gap: 3rem;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list li {
+    width: 100%;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list li:hover p.title::before {
+    transform: scale(1.2);
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list li p.title {
+    color: white;
+    font: normal 1.5rem "Noto sans KR";
+    position: relative;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list li p.title::before {
+    content: "";
+    width: 2.2rem;
+    height: 2.2rem;
+    border-radius: 50%;
+    background: #FF9900;
+    position: absolute;
+    left: -1.2rem;
+    top: -0.3rem;
+    z-index: -1;
+    transition: all 0.2s ease-out;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list li p.text {
+    color: white;
+    font: normal 1.2rem "Noto sans KR";
+    margin-top: 1rem;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list li p.text span {
+    transition: all 0.1s ease-out;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list li p.text span:hover {
+    cursor: pointer;
+    color: aqua;
+  }
+  div#basic_information_wrapper .infos_wrapper div.info ul.info_list li p#alertCopy {
+    color: rgb(255, 255, 255);
+    font: 100 0.8rem "Noto sans KR";
+    margin-top: 1rem;
+    transition: all 0.2s ease-out;
+  }
+  div#basic_information_wrapper .infos_wrapper div.my_pic {
+    width: 90vw;
+    height: 132.66vw;
+    position: absolute;
+    right: 20px;
+    top: 70px;
+    display: flex;
+    align-content: center;
+  }
+  div#basic_information_wrapper .infos_wrapper div.my_pic img {
+    width: 90vw;
+    height: 132.66vw;
+    -o-object-fit: contain;
+       object-fit: contain;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  div#basic_information_wrapper .infos_wrapper div.my_pic .img_blue_cover {
+    width: calc(90vw - 40px);
+    height: calc(132.66vw - 40px);
+    background: #003CFF;
+    mix-blend-mode: lighten;
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    z-index: 3;
+  }
+  div#basic_information_wrapper .infos_wrapper div.my_pic .bi_bg_circle_yellow {
+    width: 49rem;
+    height: 49rem;
+    border-radius: 50%;
+    background: rgba(255, 153, 0, 0.2);
+    background: linear-gradient(to bottom, rgba(255, 153, 0, 0.5) 0%, rgba(255, 153, 0, 0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#ff9900", endColorstr="#00ff9900",GradientType=0 );
+    position: absolute;
+    left: 5rem;
+    top: -9rem;
+    z-index: -1;
+  }
+  div#basic_information_wrapper .bi_bg_line_blue {
+    position: relative;
+    left: 0;
+    top: -5rem;
+  }
+  div#basic_information_wrapper .bi_bg_text_yellow {
+    width: 100%;
+    height: auto;
+    position: relative;
+    top: 15rem;
+    text-align: center;
+  }
+  div#basic_information_wrapper .bi_bg_text_yellow p {
+    color: rgba(255, 153, 0, 0.2);
+    font: normal 9.375rem "Dela Gothic One";
   }
 }
