--- a/scss/basic_information_section.scss
+++ b/scss/basic_information_section.scss
@@ -7,8 +7,6 @@ div#basic_information_wrapper {
   position: relative;
   left: 0;
   top: 0;
-  border: solid 2px green;
-  box-sizing: border-box;
   svg {
     position: absolute;
     left: 0;
@@ -167,6 +165,7 @@ div#basic_information_wrapper {
     .infos_wrapper {
       div.my_pic {
         top: 30px;
+        right: 30px;
       }
     }
   }
@@ -182,5 +181,283 @@ div#basic_information_wrapper {
 }
 
 @media screen and (max-width: 768px) {
-  
+  div#basic_information_wrapper {
+    width: 100%;
+    height: 72rem;
+    position: relative;
+    left: 0;
+    top: 0;
+    svg {
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: -1;
+    }
+    .infos_wrapper {
+      max-width: 1200px;
+      height: 33rem;
+      margin: 0 auto;
+      height: auto;
+      display: flex;
+      align-content: center;
+      position: relative;
+      left: 0;
+      top: 28rem;
+      z-index: 1;
+      div.info {
+        width: calc(50% - 30px);
+        height: 33rem;
+        position: absolute;
+        left: 0;
+        top: 0;
+        ul.info_list {
+          display: flex;
+          flex-wrap: wrap;
+          flex-direction: row;
+          justify-content: flex-start;
+          align-content: center;
+          gap: 3rem;
+          li {
+            width: 100%;
+            &:hover p.title::before {
+              transform: scale(1.2);
+            }
+            p.title {
+              color: white;
+              font: normal 1.5rem "Noto sans KR";
+              position: relative;
+              &::before {
+                content:"";
+                width: 2.2rem;
+                height: 2.2rem;
+                border-radius: 50%;
+                background: #FF9900;
+                position: absolute;
+                left: -1.2rem;
+                top: -0.3rem;
+                z-index: -1;
+                transition: all 0.2s ease-out;
+              }
+            }
+            p.text {
+              color: white;
+              font: normal 1.2rem "Noto sans KR";
+              margin-top: 1rem;
+              span {
+                transition: all 0.1s ease-out;
+                &:hover {
+                  cursor: pointer;
+                  color:aqua;
+                }
+              }
+            }
+            p#alertCopy {
+              color: rgb(255, 255, 255);
+              font: 100 0.8rem "Noto sans KR";
+              margin-top: 1rem;
+              transition: all 0.2s ease-out;
+            }
+          }
+        }
+      }
+      div.my_pic {
+        width: 45vw;
+        height: 66.33vw;
+        position: absolute;
+        right: 20px;
+        top: 70px;
+        display: flex;
+        align-content: center;
+        img {
+          width: 45vw;
+          height: 66.33vw;
+          object-fit: contain;
+          position: absolute;
+          right: 0;
+          top: 0;
+        }
+        .img_blue_cover{
+          width: calc(45vw - 40px);
+          height: calc(66.33vw - 40px);
+          background: #003CFF;
+          mix-blend-mode: lighten;
+          position: absolute;
+          left: 20px;
+          top: 20px;
+          z-index: 3;
+        }
+        .bi_bg_circle_yellow {
+          width: 49rem;
+          height: 49rem;
+          border-radius: 50%;
+          background: rgba(255, 153, 0, 0.2);
+          background: -moz-linear-gradient(top, rgba(255,153,0,0.5) 0%, rgba(255,153,0,0) 100%);
+          background: -webkit-linear-gradient(top, rgba(255,153,0,0.5) 0%,rgba(255,153,0,0) 100%);
+          background: linear-gradient(to bottom, rgba(255,153,0,0.5) 0%,rgba(255,153,0,0) 100%);
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff9900', endColorstr='#00ff9900',GradientType=0 );
+          position: absolute;
+          left: 5rem;
+          top: -9rem;
+          z-index: -1;
+        }
+      }
+    }
+    .bi_bg_line_blue {
+      position: relative;
+      left: 0;
+      top: -5rem;
+    }
+    .bi_bg_text_yellow {
+      width: 100%;
+      height: auto;
+      position: relative;
+      top: 15rem;
+      text-align: center;
+      p {
+        color: rgba(255, 153, 0, 0.20);
+        font: normal 9.375rem "Dela Gothic One";
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  div#basic_information_wrapper {
+    width: 100%;
+    height: 72rem;
+    position: relative;
+    left: 0;
+    top: 0;
+    svg {
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: -1;
+    }
+    .infos_wrapper {
+      max-width: 1200px;
+      height: 33rem;
+      margin: 0 auto;
+      height: auto;
+      display: flex;
+      align-content: center;
+      position: relative;
+      left: 0;
+      top: 28rem;
+      z-index: 1;
+      div.info {
+        width: calc(50% - 30px);
+        height: 33rem;
+        position: absolute;
+        left: 0;
+        top: 0;
+        ul.info_list {
+          display: flex;
+          flex-wrap: wrap;
+          flex-direction: row;
+          justify-content: flex-start;
+          align-content: center;
+          gap: 3rem;
+          li {
+            width: 100%;
+            &:hover p.title::before {
+              transform: scale(1.2);
+            }
+            p.title {
+              color: white;
+              font: normal 1.5rem "Noto sans KR";
+              position: relative;
+              &::before {
+                content:"";
+                width: 2.2rem;
+                height: 2.2rem;
+                border-radius: 50%;
+                background: #FF9900;
+                position: absolute;
+                left: -1.2rem;
+                top: -0.3rem;
+                z-index: -1;
+                transition: all 0.2s ease-out;
+              }
+            }
+            p.text {
+              color: white;
+              font: normal 1.2rem "Noto sans KR";
+              margin-top: 1rem;
+              span {
+                transition: all 0.1s ease-out;
+                &:hover {
+                  cursor: pointer;
+                  color:aqua;
+                }
+              }
+            }
+            p#alertCopy {
+              color: rgb(255, 255, 255);
+              font: 100 0.8rem "Noto sans KR";
+              margin-top: 1rem;
+              transition: all 0.2s ease-out;
+            }
+          }
+        }
+      }
+      div.my_pic {
+        width: 90vw;
+        height: 132.66vw;
+        position: absolute;
+        right: 20px;
+        top: 70px;
+        display: flex;
+        align-content: center;
+        img {
+          width: 90vw;
+          height: 132.66vw;
+          object-fit: contain;
+          position: absolute;
+          right: 0;
+          top: 0;
+        }
+        .img_blue_cover{
+          width: calc(90vw - 40px);
+          height: calc(132.66vw - 40px);
+          background: #003CFF;
+          mix-blend-mode: lighten;
+          position: absolute;
+          left: 20px;
+          top: 20px;
+          z-index: 3;
+        }
+        .bi_bg_circle_yellow {
+          width: 49rem;
+          height: 49rem;
+          border-radius: 50%;
+          background: rgba(255, 153, 0, 0.2);
+          background: -moz-linear-gradient(top, rgba(255,153,0,0.5) 0%, rgba(255,153,0,0) 100%);
+          background: -webkit-linear-gradient(top, rgba(255,153,0,0.5) 0%,rgba(255,153,0,0) 100%);
+          background: linear-gradient(to bottom, rgba(255,153,0,0.5) 0%,rgba(255,153,0,0) 100%);
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff9900', endColorstr='#00ff9900',GradientType=0 );
+          position: absolute;
+          left: 5rem;
+          top: -9rem;
+          z-index: -1;
+        }
+      }
+    }
+    .bi_bg_line_blue {
+      position: relative;
+      left: 0;
+      top: -5rem;
+    }
+    .bi_bg_text_yellow {
+      width: 100%;
+      height: auto;
+      position: relative;
+      top: 15rem;
+      text-align: center;
+      p {
+        color: rgba(255, 153, 0, 0.20);
+        font: normal 9.375rem "Dela Gothic One";
+      }
+    }
+  }
 }
